# codex-sync-kit

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
codex_sync_kit/: __init__.py  cli.py  config.py  git_backend.py  integrity.py  paths.py  restore.py  rules.py  scanner.py  snapshot.py
docs/: ARCHITECTURE.md  PRIVACY.md  SECURITY_REVIEW_2026-07.md  THREAT_MODEL.md
plugin/codex-sync-kit/.codex-plugin/: plugin.json
plugin/codex-sync-kit/agents/: openai.yaml
plugin/codex-sync-kit/skills/codex-sync/: SKILL.md
tests/: test_cli.py  test_config.py  test_git_backend.py  test_rules.py  test_scanner_snapshot_restore.py
