[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-sync-kit"
version = "0.1.6"
description = "Windows-first Codex profile sync into a private GitHub vault."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Sebastian Albrecht" }
]
keywords = ["codex", "sync", "github", "windows", "backup"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: System :: Archiving :: Backup"
]

[project.urls]
Homepage = "https://github.com/mySebbe/codex-sync-kit"
Repository = "https://github.com/mySebbe/codex-sync-kit"
Issues = "https://github.com/mySebbe/codex-sync-kit/issues"

[project.scripts]
codex-sync = "codex_sync_kit.cli:main"

[tool.setuptools.packages.find]
include = ["codex_sync_kit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
